# thebro

./: Dockerfile  README.md  pyproject.toml
src/: bot.py
